--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,10 +1,216 @@
 * {
   box-sizing: border-box;
 }
+:root {
+  --header-bg: #10375c;
+}
 html {
   font-size: 62.5%;
 }
 body {
   font-size: 1.6rem;
   font-family: "Sora", sans-serif;
+}
+
+/* common */
+.border {
+  border: 1px solid #6a00ff;
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+.btn {
+  --height: 60px;
+  display: inline-block;
+  text-align: center;
+  min-width: 205px;
+  min-height: var(--height);
+  border-radius: 30px;
+  background: #2e80ce;
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 60px;
+}
+.container {
+  width: 1170px;
+  max-width: calc(100% - 48px);
+  margin: 0 auto;
+}
+
+/* header */
+.header-fixed {
+  position: sticky;
+  z-index: 10;
+  top: -30px;
+  padding-top: 30px;
+  background-color: var(--header-bg);
+}
+.header {
+  min-height: 100vh;
+  padding-top: 30px;
+  background-color: var(--header-bg);
+}
+.header-top {
+  display: flex;
+}
+.logo {
+  position: relative;
+  margin-top: 6px;
+  display: inline-flex;
+  font-size: 1rem;
+}
+.logo__circle::before,
+.logo__circle::after {
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+}
+.logo__circle::before {
+  width: 3em;
+  height: 3em;
+  background-color: #2e80ce;
+}
+.logo__circle::after {
+  position: absolute;
+  top: 1.1em;
+  left: 1.1em;
+  width: 1.6em;
+  height: 1.6em;
+  background-color: #fff;
+}
+.logo__text {
+  text-align: right;
+  line-height: 1.6em;
+  margin-left: 0.6em;
+}
+.logo__brand {
+  display: block;
+  font-size: 1.8em;
+  font-weight: 400;
+  color: #fff;
+}
+.logo__brand--small {
+  font-size: 1.2em;
+  font-weight: 300;
+}
+
+.navigation__list {
+  display: flex;
+  height: 44px;
+  margin-left: 318px;
+}
+
+.navigation__link {
+  color: #c9d2da;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 44px;
+  margin-right: 42px;
+}
+.navigation__link:hover,
+.navigation__link--active {
+  color: #fff;
+}
+.navigation__link--active::before {
+  position: relative;
+  top: -1px;
+  left: -8px;
+  content: " ";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.header-top__btn-login {
+  color: #c9d2da;
+  font-size: 1.6rem;
+  font-weight: 300;
+  margin-left: 140px;
+  line-height: 44px;
+}
+.header-top__btn-signup:hover {
+  opacity: 0.9;
+}
+.header-top__btn-signup {
+  text-align: center;
+  width: 104px;
+  height: 44px;
+  border-radius: 22px;
+  background: #2e80ce;
+  color: #fff;
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin-left: 28px;
+  line-height: 44px;
+}
+/* header-contents */
+.header-contents {
+  margin-top: 76px;
+  display: flex;
+}
+.header-text {
+  margin-top: 60px;
+  width: 517px;
+  height: 420px;
+}
+.header-title {
+  color: #fff;
+
+  font-size: 7rem;
+
+  font-weight: 600;
+  line-height: 8rem;
+  letter-spacing: -0.14rem;
+}
+.header-desc {
+  margin-top: 22px;
+  color: #c9d2da;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 3rem;
+}
+.header-row {
+  display: flex;
+  margin-top: 38px;
+}
+.header-phone:hover {
+  text-decoration: underline;
+  color: #6a00ff;
+}
+.header-phone {
+  margin-left: 38px;
+  height: 60px;
+  color: #fff;
+  text-align: center;
+  font-family: Sora;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 60px; /* 166.667% */
+}
+.header-img {
+  position: relative;
+  margin-left: 116px;
+  width: 534px;
+  height: 540px;
+}
+.header-img--imgbot {
+  position: absolute;
+  top: 65px;
+  margin-left: -6px;
+  width: 210px;
+  height: 410px;
+}
+.header-img--imgtop {
+  z-index: 1;
+  position: relative;
+  width: 330px;
+  height: 540px;
 }
