--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -214,3 +214,77 @@ a {
   width: 330px;
   height: 540px;
 }
+
+/* services */
+.services {
+  margin-top: 170px;
+  height: 778px;
+}
+.services .container {
+  height: 770px;
+}
+.services-content {
+  display: flex;
+  margin-top: 70px;
+}
+.services-title {
+  margin: 0 auto;
+  width: 468px;
+  height: 138px;
+}
+.services-title__title {
+  color: #10375c;
+  text-align: center;
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 6rem;
+  letter-spacing: -1px;
+}
+.services-title__desc {
+  margin-top: 18px;
+  color: #575f66;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 300;
+  line-height: 3rem;
+}
+.services-media {
+  width: 570px;
+  height: 570px;
+}
+.services-list {
+  margin-left: 130px;
+  margin-top: 18px;
+  width: 470px;
+  height: 499px;
+}
+.services-list__item:hover {
+  background: #fff;
+  box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+.services-list__item {
+  display: flex;
+  width: 470px;
+  height: 128px;
+}
+.services-btn {
+  margin-top: 55px;
+}
+
+.services-list__item__title {
+  display: inline-block;
+  color: #10375c;
+  margin-top: 21px;
+  font-size: 1.8rem;
+
+  font-weight: 600;
+}
+.services-list__item__desc {
+  display: inline-block;
+  color: #575f66;
+  margin-top: 8px;
+  font-size: 1.6rem;
+
+  font-weight: 300;
+  line-height: 2.8rem;
+}
