--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -383,3 +383,50 @@ a {
   line-height: 2.8;
   margin-left: 42px;
 }
+/* about */
+.about {
+  margin-top: 170px;
+}
+.about .container {
+  display: flex;
+}
+.about__img {
+  position: relative;
+  width: 570px;
+  height: 491px;
+  margin-right: 130px;
+}
+
+.about__text {
+  width: 470px;
+  height: 326px;
+}
+.about__img--bot {
+  position: relative;
+  width: 512px;
+  height: 370px;
+}
+.about__img--top {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+.about__text--title {
+  color: #10375c;
+
+  font-size: 5rem;
+
+  font-weight: 600;
+  line-height: 6rem;
+  letter-spacing: -0.1rem;
+}
+.about__text--desc {
+  margin-top: 18px;
+  margin-bottom: 34px;
+  color: #575f66;
+
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 3rem;
+}
