--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -578,6 +578,9 @@ line-height: 3rem;
   height: 240px;
 }
 .blog__card{
+  border-radius: 12px;
+border: 1px solid #E8EBEE;
+background: #FFF;
   width: 270px;
   height: 375px;
 }
@@ -626,4 +629,54 @@ font-size: 1.4rem;
 font-style: normal;
 font-weight: 400;
 line-height: normal;
+}
+/* CTAB */
+.ctab{
+  margin-top: 170px;
+  height: 425px;
+}
+.ctab .btn{
+  margin-left: 50%;
+    transform: translate(-50%, 10px);
+}
+.ctab .container.border{
+  border: 1px solid #F6FBFF;
+  background: #F6FBFF;
+  height: 425px;
+
+}
+.ctab__title{
+  color: #10375C;
+text-align: center;
+margin-top:  100px; ;
+margin-bottom: 18px;
+
+font-size: 5rem;
+font-style: normal;
+font-weight: 600;
+line-height: 6rem;
+letter-spacing: -1px;
+}
+.ctab__title::after{
+  margin: auto;
+  margin-top: 18px;
+  content: "";
+  display: block;
+  width: 136px;
+height: 2px;
+background: #2E80CE;
+
+
+}
+.ctab__desc{
+  color: #575F66;
+text-align: center;
+margin:auto;
+margin-bottom: 38px;
+width: 617px;
+
+font-size: 1.6rem;
+font-style: normal;
+font-weight: 300;
+line-height: 2.8rem;
 }
