--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -680,3 +680,127 @@ font-style: normal;
 font-weight: 300;
 line-height: 2.8rem;
 }
+/* footer */
+.footer{
+  height: 553px;
+  margin-top: 170px;
+  background: #10375C;
+}
+.footer.border{
+  border: 1px solid #10375C;;
+}
+.footer .container{
+  display: flex;
+  height: 356px;
+  margin-top: 100px;
+
+}
+
+.footer__logo{
+  width: 336px;
+  height: 87px;
+}
+.footer__logo--desc{
+  color: #A9B3BB;
+font-family: Open Sans;
+font-size: 1.6rem;
+font-style: normal;
+font-weight: 400;
+line-height: 2.8rem;
+}
+.footer__logo.border,
+.footer__groupsup.border,
+.footer__groupsup--suplink2.border{
+  border: 1px solid #10375C;
+}
+.footer__groupsup{
+  
+  margin-left: 78px;
+  width: 134px;
+  height: 328px;
+}
+.footer__groupsup--suplink1{
+  margin-right: 78px;
+  width: 137px;
+}
+.footer__groupsup--suplink2{
+  margin-right: 78px;
+  width: 137px;
+}
+.stay__title,
+.stay__sub,
+.footer__group__link--highlight{
+color: #FFF;
+margin-bottom: 20px;
+font-family: Open Sans;
+font-size: 1.6rem;
+font-style: normal;
+font-weight: 600;
+line-height: 2.8rem; 
+}
+.footer__group--link2{
+  margin-top: 18px;
+}
+.footer__group__link{
+  color: #A9B3BB;
+  margin-bottom: 10px;
+font-family: Open Sans;
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 400;
+line-height: 2.6rem; 
+}
+
+.stay__desc{
+  color: #A9B3BB;
+  width: 273px;
+  font-family: Open Sans;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.6rem; /
+}
+.email{
+  border-radius: 4px;
+border: 1px solid #406181;
+  color: #9CA8B1;
+  width: 212px;
+  height: 46px;
+font-family: Open Sans;
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 400;
+line-height: 2.6rem; 
+  background-color: #10375C;;
+}
+.btn--email{
+  color: #FFF;
+  margin-top: 10px;
+font-family: Open Sans;
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 600;
+line-height: 2.6rem; 
+  width: 108px;
+height: 46px;
+flex-shrink: 0;
+border-radius: 4px;
+background-color: #2E80CE;
+}
+
+.line{
+margin: auto;
+ width: 1170px;
+height: 1px;
+background: #406181;
+}
+.copyright{
+  color: #AAB3BA;
+  margin-top: 28px;
+text-align: center;
+font-family: Open Sans;
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 400;
+line-height: 2.6rem; 
+}
